// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AriaToolbar /> snapshot should match snapshot 1`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={0}
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
  />
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should match snapshot with aria label + button group render 1`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={0}
  shouldRenderAsButtonGroup={true}
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonGroup
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    orientation="horizontal"
    role="toolbar"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <div
      aria-label="test"
      className="md-button-group-wrapper md-aria-toolbar-wrapper"
      data-compressed={false}
      data-orientation="horizontal"
      data-round={false}
      data-separator={false}
      data-spaced={false}
      role="toolbar"
      style={
        Object {
          "color": "pink",
        }
      }
    />
  </ButtonGroup>
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should match snapshot with className 1`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={0}
  className="example-class"
>
  <div
    aria-label="test"
    className="example-class md-aria-toolbar-wrapper"
    role="toolbar"
  />
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should match snapshot with data-test 1`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={0}
  data-test="data-test"
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    data-test="data-test"
    role="toolbar"
  />
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should match snapshot with id 1`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={0}
  id="example-id"
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    id="example-id"
    role="toolbar"
  />
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should match snapshot with style 1`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={0}
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should set tab index appropriately - horizontal orientation 1`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={3}
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <ForwardRef
      itemIndex={0}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={0}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={1}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={2}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
  </div>
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should set tab index appropriately - horizontal orientation 2`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={3}
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <ForwardRef
      itemIndex={0}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={1}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={2}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={0}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
  </div>
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should set tab index appropriately - horizontal orientation 3`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={3}
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <ForwardRef
      itemIndex={0}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={1}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={0}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={2}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
  </div>
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should set tab index appropriately - horizontal orientation 4`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={3}
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <ForwardRef
      itemIndex={0}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={1}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={2}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={0}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
  </div>
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should set tab index appropriately - vertical orientation 1`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={3}
  orientation="vertical"
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <ForwardRef
      itemIndex={0}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={0}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={1}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={2}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
  </div>
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should set tab index appropriately - vertical orientation 2`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={3}
  orientation="vertical"
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <ForwardRef
      itemIndex={0}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={1}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={2}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={0}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
  </div>
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should set tab index appropriately - vertical orientation 3`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={3}
  orientation="vertical"
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <ForwardRef
      itemIndex={0}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={1}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={0}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={2}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
  </div>
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should set tab index appropriately - vertical orientation 4`] = `
<AriaToolbar
  ariaLabel="test"
  ariaToolbarItemsSize={3}
  orientation="vertical"
>
  <div
    aria-label="test"
    className="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <ForwardRef
      itemIndex={0}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={1}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={-1}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
    <ForwardRef
      itemIndex={2}
    >
      <ButtonSimple
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPress={[Function]}
        tabIndex={0}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ForwardRef>
  </div>
</AriaToolbar>
`;

exports[`<AriaToolbar /> snapshot should update order if triggered externally 1`] = `
<div>
  <div
    aria-label="test"
    class="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <button
      class="md-button-simple-wrapper"
      type="button"
    />
    <button
      class="md-button-simple-wrapper"
      data-exclude-focus="true"
      tabindex="-1"
      type="button"
    />
    <button
      class="md-button-simple-wrapper"
      data-exclude-focus="true"
      tabindex="-1"
      type="button"
    />
  </div>
</div>
`;

exports[`<AriaToolbar /> snapshot should update order if triggered externally 2`] = `
<div>
  <div
    aria-label="test"
    class="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <button
      class="md-button-simple-wrapper"
      tabindex="-1"
      type="button"
    />
    <button
      class="md-button-simple-wrapper"
      data-exclude-focus="true"
      tabindex="-1"
      type="button"
    />
    <button
      class="md-button-simple-wrapper md-focus-ring-wrapper children"
      data-exclude-focus="true"
      type="button"
    />
  </div>
</div>
`;

exports[`<AriaToolbar /> snapshot should update order if triggered externally 3`] = `
<div>
  <div
    aria-label="test"
    class="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <button
      class="md-button-simple-wrapper"
      tabindex="-1"
      type="button"
    />
    <button
      class="md-button-simple-wrapper md-focus-ring-wrapper children"
      data-exclude-focus="true"
      type="button"
    />
    <button
      class="md-button-simple-wrapper"
      data-exclude-focus="true"
      tabindex="-1"
      type="button"
    />
  </div>
</div>
`;

exports[`<AriaToolbar /> snapshot should update order if triggered externally 4`] = `
<div>
  <div
    aria-label="test"
    class="md-aria-toolbar-wrapper"
    role="toolbar"
  >
    <button
      class="md-button-simple-wrapper"
      tabindex="-1"
      type="button"
    />
    <button
      class="md-button-simple-wrapper"
      data-exclude-focus="true"
      tabindex="-1"
      type="button"
    />
    <button
      class="md-button-simple-wrapper md-focus-ring-wrapper children"
      data-exclude-focus="true"
      type="button"
    />
  </div>
</div>
`;
